--- a/style.css
+++ b/style.css
@@ -2783,7 +2783,7 @@ background-color:#CCCCCC;
   #boxsh{
     box-shadow: none;
   }
-} 
+}   
 
 
 @media screen and (min-width: 479px)  {
@@ -2798,4 +2798,141 @@ background-color:#CCCCCC;
   cursor: default;
   text-decoration: none;
   }
+}
+
+
+
+/************************************
+** お問い合わせフォームの入力
+************************************/
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"],
+select,
+textarea,
+.field {
+  display: block;
+  width: 100%;
+  height: 45px;
+  margin-bottom: 0;
+  padding: 0 12px;
+  border: 0;
+  border-radius: 3px;
+  background-color: #eff1f5;
+  box-shadow: none;
+  color: #5c6b80;
+  font-size: 1em;
+  vertical-align: middle;
+  line-height: 45px;
+  transition: background-color 0.24s ease-in-out;
+}
+textarea {
+  max-width: 100%;
+  min-height: 120px;
+  line-height: 1.5em;
+  padding: 0.5em;
+  overflow: auto;
+}
+@media(max-width:500px) {
+    .inquiry td,
+    .inquiry th {
+        display: block !important;
+        width: 100% !important;
+        border-top: none !important;
+        -webkit-box-sizing: border-box !important;
+        -moz-box-sizing: border-box !important;
+        box-sizing: border-box !important
+    }
+    .inquiry tr:first-child th {
+        border-top: 1px solid #d7d7d7 !important
+    }
+    .inquiry .any,
+    .inquiry .haveto {
+        font-size: 10px
+    }
+}
+.inquiry th {
+    text-align: left;
+    font-size: 14px;
+    color: #444;
+    padding-right: 5px;
+    width: 30%;
+    background: #f7f7f7;
+    border: solid 1px #d7d7d7
+}
+.inquiry td {
+    font-size: 13px;
+    border: solid 1px #d7d7d7
+}
+.entry-content .inquiry tr,
+.entry-content table {
+    border: solid 1px #d7d7d7
+}
+.haveto {
+    font-size: 7px;
+    padding: 5px;
+    background: #FF3C87;
+    color: #fff;
+    border-radius: 2px;
+    margin-right: 5px;
+    position: relative;
+    bottom: 1px
+}
+.any {
+    font-size: 7px;
+    padding: 5px;
+    background: #a2faf7;
+    color: #fff;
+    border-radius: 2px;
+    margin-right: 5px;
+    position: relative;
+    bottom: 1px
+}
+.verticallist .wpcf7-list-item {
+    display: block
+}
+#formbtn {
+    display: block;
+    padding: 15px;
+    width: 350px;
+    background-image: linear-gradient(to right, #6af7f3 0%, #0abab5 51%, #6af7f3 100%);
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 2px;
+    margin: 25px auto 0
+}
+
+#formbtn:hover {
+    background: #fff;
+    color: #0abab5;
+    border: 2px solid #0abab5;
+}
+th {
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 13px
+}
+td {
+    border-top: 1px solid #ededed;
+    padding: 12px
+}
+input,
+select,
+textarea {
+    border: 1px solid #dfdfdf;
+    letter-spacing: 1px;
+    margin: 0;
+    max-width: 100%;
+    resize: none
 }
