--- a/style.css
+++ b/style.css
@@ -2724,6 +2724,12 @@ background-color:#CCCCCC;
 }
 
 @media screen and (max-width: 479px)  {
+  * {
+        margin: 0px;
+    
+        padding: 0px;
+    }
+    
   
   .toplogo{
     width:50px;
